--- a/src/views/client/pages/cart/index.pug
+++ b/src/views/client/pages/cart/index.pug
@@ -6,21 +6,21 @@ block main
         .row
             .col-12
                 +box-head("Giỏ Hàng")
+        if(cartDetail.products.length > 0)
+            .row
+                .col-12
+                    table(class="table table-bordered")
+                        thead
+                            tr
+                                th STT
+                                th Hình ảnh
+                                th Tên SP
+                                th Giá
+                                th Số lượng
+                                th Tổng tiền
+                                th Hành động
+                        tbody
 
-        .row
-            .col-12
-                table(class="table table-bordered")
-                    thead
-                        tr
-                            th STT
-                            th Hình ảnh
-                            th Tên SP
-                            th Giá
-                            th Số lượng
-                            th Tổng tiền
-                            th Hành động
-                    tbody
-                        if(cartDetail.products.length > 0)
                             each item, index in cartDetail.products
                                 tr
                                     td #{index+1}
@@ -44,10 +44,17 @@ block main
                                             href=`/cart/delete/${item.product_id}`
                                             class="btn btn-danger"
                                         ) Xoá
-                .row.text-end
-                    h3(class="text-right") Tổng đơn hàng: #{cartDetail.totalPrice}$
+                    .row.text-end
+                        h3(class="text-right") Tổng đơn hàng: #{cartDetail.totalPrice}$
 
-                    div(class="text-right mt-3")
-                        a(href="/checkout" class="btn btn-success") Thanh toán
-
+                        div(class="text-right mt-3")
+                            a(href="/checkout" class="btn btn-success") Thanh toán
+        else
+            row
+                h3.text-danger.text-center Không tìm thấy sản phẩm nào trong giỏ hàng!
+                div.d-flex.justify-content-center
+                    a(
+                        href="/products"
+                        class="btn btn-primary mb-3"
+                    ) Thêm sản phẩm
     script(src="/js/cart.js") 
